fix: JDK 8 compatibility - URLEncoder and Map.of